[package]
name = "catscii"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
artem = { version = "3.0.0", default-features = false }
axum = "0.7.5"
dotenv = "0.15.0"
image = "0.25.2"
pretty-hex = "0.4.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
